--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
       - Python:
           - Python基础:
                 - 词法分析: Programming/Python/Python基础/词法分析.md
+                - IO详解: Programming/Python/Python基础/同步异步IO.md
           - Python进阶:
                 - 进阶: Programming/Python/Python高级/Python高级.md
           - Python高级:
@@ -42,7 +43,8 @@ nav:
       - Science:
           - MATLAB: Tutorial/science/MATLAB.md
       - GUI:
-          - QT: Tutorial/GUI/QT.md
+          - QT: 
+            - Qt基础: Tutorial/GUI/Qt/QT.md
           - QML: Tutorial/GUI/QML.md
           - WPF: Tutorial/GUI/WPF.md
           - MFC: Tutorial/GUI/MFC.md
@@ -57,10 +59,36 @@ nav:
       - 文章:
           - 人工智能:
               - open系列库: Reference/文章/人工智能/open系列库.md
+  - Tags: tags.md
 theme:
   name: material
+#   search_index_only: false
+  icon:
+    tag: 
+       CSS3: simple/css3  
+       Python: simple/python
+       default: material/robot-happy
+       document: material/file-document
+       Qt: simple/qt
   features:
     - navigation.tracking
     - navigation.tabs # 上方
 #    - toc.integrate
     - navigation.prune # 自动隐藏导航栏
+    - search.highlight # 搜索内容匹配高亮
+    - search.share #  当用户单击共享按钮时，URL 会自动复制到剪贴板。
+    - search.suggest # 搜索建议
+plugins:
+  - tags:
+         tags_file: tags.md
+  - search:
+         separator: '[\s\-\.]+'
+         lang: 
+            - en
+            - ja
+extra:
+  tags:
+    CSS3: CSS3
+    Python: Python
+    Document: document
+    Qt: Qt
