--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -145,6 +145,9 @@ nav:
               - open系列库: Reference\文章\人工智能\open系列库.md
   - Embedded:
       - Arduino: Tutorial\Embedded\Arduino\Arduino.md
+  - Languages: 
+      - English: 
+        - 100句子记完7000雅思单词: languages\english\100句子记完7000雅思单词\01-25.md
   - Other:
       - reading:
           - 七周七语言: Other\reading\七周七语言.md
